# tartempion

./: .gitattributes  CMakeLists.txt  Doctor.py  autobias.py  autogradQP.py  autoloss.py  autonorm.py  data_template.py  dataset_grasping.py  dataset_to_torch.py  eval.py  finder.py  fonction.cpp  fonction.hpp  g1.py  go2.py  hit_ground.py  learn_complex_traj.py  learn_traj.py  main.cpp  merge_dataset.py  player.py  position_trainnoik.py  safedataset_generation.py  testlinux.py  testqpderivatives.py  testsimpleloss.py  train.py  trainL2.py  train_Qwen.py  train_emb.py  trainnoik.py  traj_creator.py  traj_renderer.py  trajopt.py  ultimatetest.py  viewer.py  vla.py
python/: CMakeLists.txt  module.cpp
qppass/: SE3InductiveBias.cpp  SE3InductiveBias.hpp  dik_cols.cpp  dik_cols.hpp  forward_pass.cpp  forward_pass.hpp  qp.cpp  qp.hpp  renorm.cpp  renorm.hpp  simpleSE3loss.cpp  simpleSE3loss.hpp  testing.cpp  testing.hpp  testing.py
